# recipebottle

./: .gitattributes  .gitignore  CLAUDE.md  README.md  index.html  podman-gateway-proposal.md
Tools/buk/: README.md  bubc_constants.sh  buc_command.sh  bud_dispatch.sh  buf_fact.sh  bug_git.sh  buh_handbook.sh  bul_launcher.sh  bupr_regime.sh  buq_qualify.sh  burc_cli.sh  burc_regime.sh  (+21 more)
Tools/rbk/rbtd/: Cargo.toml  rbte_cli.sh  rbte_engine.sh
Tools/rbk/rbtd/src/: lib.rs  main.rs  rbtdgc_consts.rs  rbtdra_almanac.rs  rbtdrb_probe.rs  rbtdrc_crucible.rs  rbtdrd_dogfight.rs  rbtdre_engine.rs  rbtdrf_fast.rs  rbtdrf_handbook.rs  rbtdrg_log.rs  rbtdrh_chain.rs  rbtdri_invocation.rs  rbtdrj_touchstone.rs  rbtdrk_depot.rs  rbtdrk_freehold.rs  rbtdrl_calibrant.rs  rbtdrm_manifest.rs  rbtdrn_conformance.rs  rbtdro_onboarding.rs  rbtdrp_attest.rs  rbtdrp_lifecycle.rs  rbtdrq_damnatio.rs  rbtdrq_loupe.rs  rbtdrq_perambulation.rs  rbtdrq_pyx.rs  rbtdrs_poison.rs  rbtdru_bash.rs  rbtdru_cupel.rs  rbtdru_python.rs  rbtdrv_patrol.rs  rbtdrw_dowse.rs  rbtdrx_platform.rs  rbtdtb_probe.rs  rbtdtc_crucible.rs  rbtdte_engine.rs  rbtdth_helpers.rs  rbtdti_invocation.rs  rbtdtk_freehold.rs  rbtdtl_calibrant.rs  (+5 more)
diagrams/: rbdgl_federation-login.puml  rbdgm_federation-seam.puml  rbdgs_federation-setup.puml
rbmm_moorings/: burc.env  rbrd.env  rbrp.env  rbrr.env  rbrw.env
tt/: buw-SI.StationInit.sh  buw-rsr.RenderStationRegime.sh  buw-xb.BandChain.sh  rbw-Odb.OnboardingDirectorBind.sh  rbw-gPI.PayorInstall.sh  rbw-lB.DirectorBanishesLode.sh  rbw-lE.DirectorEnsconcesBole.sh  z-launcher.sh
(+232 files in other folders)
